Fix arrow position and items alignment inside supernova content related to #357

--- a/packages/block-library/src/blocks/supernova/scss/_carousel.scss
+++ b/packages/block-library/src/blocks/supernova/scss/_carousel.scss
@@ -118,7 +118,7 @@
   }
 
   .slick-prev {
-    left: calc(0.5 * var(--nb-grid-spacing));
+    left: 50px;
 
     &:before {
       border-top: var(--nb-carousel-arrow-width) solid var(--nb-carousel-arrow-color);
@@ -128,7 +128,7 @@
   }
 
   .slick-next {
-    right: calc(0.5 * var(--nb-grid-spacing));
+    right: 50px;
 
     &:before {
       border-top: var(--nb-carousel-arrow-width) solid var(--nb-carousel-arrow-color);
